--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/extension-docs/assets/css/0.styles.a221b2e8.css" as="style"><link rel="preload" href="/extension-docs/assets/js/app.9b9dfa59.js" as="script"><link rel="preload" href="/extension-docs/assets/js/2.fd243e3f.js" as="script"><link rel="preload" href="/extension-docs/assets/js/27.df97af14.js" as="script"><link rel="prefetch" href="/extension-docs/assets/js/10.c274ca5a.js"><link rel="prefetch" href="/extension-docs/assets/js/11.684115fc.js"><link rel="prefetch" href="/extension-docs/assets/js/12.4f5ddf23.js"><link rel="prefetch" href="/extension-docs/assets/js/13.61603454.js"><link rel="prefetch" href="/extension-docs/assets/js/14.61dc16af.js"><link rel="prefetch" href="/extension-docs/assets/js/15.892ac1c6.js"><link rel="prefetch" href="/extension-docs/assets/js/16.2f2b8759.js"><link rel="prefetch" href="/extension-docs/assets/js/17.167d7af2.js"><link rel="prefetch" href="/extension-docs/assets/js/18.15844322.js"><link rel="prefetch" href="/extension-docs/assets/js/19.1c3c4409.js"><link rel="prefetch" href="/extension-docs/assets/js/20.3d9f6639.js"><link rel="prefetch" href="/extension-docs/assets/js/21.4e03b6a7.js"><link rel="prefetch" href="/extension-docs/assets/js/22.6e89efbf.js"><link rel="prefetch" href="/extension-docs/assets/js/23.33e3f40c.js"><link rel="prefetch" href="/extension-docs/assets/js/24.abd21806.js"><link rel="prefetch" href="/extension-docs/assets/js/25.dd5bfb19.js"><link rel="prefetch" href="/extension-docs/assets/js/26.8a307078.js"><link rel="prefetch" href="/extension-docs/assets/js/3.ef41aaf4.js"><link rel="prefetch" href="/extension-docs/assets/js/4.9c3d6252.js"><link rel="prefetch" href="/extension-docs/assets/js/5.0673701e.js"><link rel="prefetch" href="/extension-docs/assets/js/6.f1c75625.js"><link rel="prefetch" href="/extension-docs/assets/js/7.0ede63ba.js"><link rel="prefetch" href="/extension-docs/assets/js/8.ea3664ab.js"><link rel="prefetch" href="/extension-docs/assets/js/9.42b36313.js">
+    <link rel="preload" href="/extension-docs/assets/css/0.styles.a221b2e8.css" as="style"><link rel="preload" href="/extension-docs/assets/js/app.92e7c169.js" as="script"><link rel="preload" href="/extension-docs/assets/js/2.fd243e3f.js" as="script"><link rel="preload" href="/extension-docs/assets/js/29.f82fa990.js" as="script"><link rel="prefetch" href="/extension-docs/assets/js/10.1e4ce262.js"><link rel="prefetch" href="/extension-docs/assets/js/11.684115fc.js"><link rel="prefetch" href="/extension-docs/assets/js/12.4f5ddf23.js"><link rel="prefetch" href="/extension-docs/assets/js/13.0e4bb074.js"><link rel="prefetch" href="/extension-docs/assets/js/14.61dc16af.js"><link rel="prefetch" href="/extension-docs/assets/js/15.892ac1c6.js"><link rel="prefetch" href="/extension-docs/assets/js/16.2f2b8759.js"><link rel="prefetch" href="/extension-docs/assets/js/17.167d7af2.js"><link rel="prefetch" href="/extension-docs/assets/js/18.15844322.js"><link rel="prefetch" href="/extension-docs/assets/js/19.1c3c4409.js"><link rel="prefetch" href="/extension-docs/assets/js/20.3d9f6639.js"><link rel="prefetch" href="/extension-docs/assets/js/21.4e03b6a7.js"><link rel="prefetch" href="/extension-docs/assets/js/22.6e89efbf.js"><link rel="prefetch" href="/extension-docs/assets/js/23.99fdacde.js"><link rel="prefetch" href="/extension-docs/assets/js/24.3106c541.js"><link rel="prefetch" href="/extension-docs/assets/js/25.01b734a9.js"><link rel="prefetch" href="/extension-docs/assets/js/26.3ec61eba.js"><link rel="prefetch" href="/extension-docs/assets/js/27.76ef2026.js"><link rel="prefetch" href="/extension-docs/assets/js/28.e5f8ddbd.js"><link rel="prefetch" href="/extension-docs/assets/js/3.1c931548.js"><link rel="prefetch" href="/extension-docs/assets/js/4.85c39e29.js"><link rel="prefetch" href="/extension-docs/assets/js/5.a4b85ec6.js"><link rel="prefetch" href="/extension-docs/assets/js/6.7c9352ee.js"><link rel="prefetch" href="/extension-docs/assets/js/7.0ede63ba.js"><link rel="prefetch" href="/extension-docs/assets/js/8.ea3664ab.js"><link rel="prefetch" href="/extension-docs/assets/js/9.70b50e87.js">
     <link rel="stylesheet" href="/extension-docs/assets/css/0.styles.a221b2e8.css">
   </head>
   <body>
@@ -19,10 +19,14 @@
   Guide
 </a></div><div class="nav-item"><a href="/extension-docs/api/" class="nav-link">
   API Reference
+</a></div><div class="nav-item"><a href="/extension-docs/examples/" class="nav-link">
+  Examples
 </a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/extension-docs/guide/" class="nav-link">
   Guide
 </a></div><div class="nav-item"><a href="/extension-docs/api/" class="nav-link">
   API Reference
+</a></div><div class="nav-item"><a href="/extension-docs/examples/" class="nav-link">
+  Examples
 </a></div> <!----></nav>  <!----> </aside> <main aria-labelledby="main-title" class="home"><header class="hero"><img src="https://www.twilio.com/quest/next/img/logo@4x.png" alt="hero"> <h1 id="main-title">
       TwilioQuest Extensions
     </h1> <p class="description">
@@ -30,8 +34,8 @@
     </p> <p class="action"><a href="/extension-docs/guide/" class="nav-link action-button">
   Begin Your Adventure →
 </a></p></header> <div class="features"><div class="feature"><h2>Create New Worlds</h2> <p>Weave new lessons into the rich sci-fi universe of TwilioQuest, using our educational RPG framework.</p></div><div class="feature"><h2>Teach Anything</h2> <p>With the full power of Node.js on the desktop (via Electron), you can teach any technical tool or any concept.</p></div><div class="feature"><h2>Reach Developers</h2> <p>Create content for the large and growing community of TwilioQuest players.</p></div></div> <div class="theme-default-content custom content__default"></div> <div class="footer">
-    Made with &lt;3 by Team TwilioQuest
+    We can't wait to see what you build!
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/extension-docs/assets/js/app.9b9dfa59.js" defer></script><script src="/extension-docs/assets/js/2.fd243e3f.js" defer></script><script src="/extension-docs/assets/js/27.df97af14.js" defer></script>
+    <script src="/extension-docs/assets/js/app.92e7c169.js" defer></script><script src="/extension-docs/assets/js/2.fd243e3f.js" defer></script><script src="/extension-docs/assets/js/29.f82fa990.js" defer></script>
   </body>
 </html>
